--- a/home.html
+++ b/home.html
@@ -63,7 +63,17 @@
 							<div class="cart-sum-container">
 								<img src="images/red-cart.png"/>
 								<div class="cart-sum">
-									2 650 р
+									Корзина пуста
+								</div>
+								<div class="cart-container cart-hidden">
+									<div class="cart">
+										<div class="red-part"></div>
+										<div class="calculation-container">
+											<div class="final-order-button" data-toggle="modal" data-target="#orderModal">
+												оформить заказ
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 							<!--CART-PRICE-->
@@ -274,9 +284,9 @@
 														Выберите размер
 													</div>
 													<select name="size-selector" class="size">
-														<option value="1" data-price="500">35 см.</option>
-														<option value="2" data-price="1000">45 см.</option>
-														<option value="3" data-price="1500">55 см.</option>
+														<option value="1" data-price="500">35 см.(маленькая)</option>
+														<option value="2" data-price="1000">45 см.(средняя)</option>
+														<option value="3" data-price="1500">55 см.(большая)</option>
 													</select>
 												</div>
 												<div class="select-inner-holder btcf">
@@ -322,9 +332,9 @@
 														Выберите размер
 													</div>
 													<select name="size-selector" class="size">
-														<option value="1" data-price="500">35 см.</option>
-														<option value="2" data-price="1000">45 см.</option>
-														<option value="3" data-price="1500">55 см.</option>
+														<option value="1" data-price="500">35 см.(маленькая)</option>
+														<option value="2" data-price="1000">45 см.(средняя)</option>
+														<option value="3" data-price="1500">55 см.(большая)</option>
 													</select>
 												</div>
 												<div class="select-inner-holder btcf">
@@ -370,9 +380,9 @@
 														Выберите размер
 													</div>
 													<select name="size-selector" class="size">
-														<option value="1" data-price="500">35 см.</option>
-														<option value="2" data-price="1000">45 см.</option>
-														<option value="3" data-price="1500">55 см.</option>
+														<option value="1" data-price="500">35 см.(маленькая)</option>
+														<option value="2" data-price="1000">45 см.(средняя)</option>
+														<option value="3" data-price="1500">55 см.(большая)</option>
 													</select>
 												</div>
 												<div class="select-inner-holder btcf">
@@ -418,9 +428,9 @@
 														Выберите размер
 													</div>
 													<select name="size-selector" class="size">
-														<option value="1" data-price="500">35 см.</option>
-														<option value="2" data-price="1000">45 см.</option>
-														<option value="3" data-price="1500">55 см.</option>
+														<option value="1" data-price="500">35 см.(маленькая)</option>
+														<option value="2" data-price="1000">45 см.(средняя)</option>
+														<option value="3" data-price="1500">55 см.(большая)</option>
 													</select>
 												</div>
 												<div class="select-inner-holder btcf">
@@ -466,9 +476,9 @@
 														Выберите размер
 													</div>
 													<select name="size-selector" class="size">
-														<option value="1" data-price="500">35 см.</option>
-														<option value="2" data-price="1000">45 см.</option>
-														<option value="3" data-price="1500">55 см.</option>
+														<option value="1" data-price="500">35 см.(маленькая)</option>
+														<option value="2" data-price="1000">45 см.(средняя)</option>
+														<option value="3" data-price="1500">55 см.(большая)</option>
 													</select>
 												</div>
 												<div class="select-inner-holder btcf">
@@ -514,9 +524,9 @@
 														Выберите размер
 													</div>
 													<select name="size-selector" class="size">
-														<option value="1" data-price="500">35 см.</option>
-														<option value="2" data-price="1000">45 см.</option>
-														<option value="3" data-price="1500">55 см.</option>
+														<option value="1" data-price="500">35 см.(маленькая)</option>
+														<option value="2" data-price="1000">45 см.(средняя)</option>
+														<option value="3" data-price="1500">55 см.(большая)</option>
 													</select>
 												</div>
 												<div class="select-inner-holder btcf">
@@ -562,9 +572,9 @@
 														Выберите размер
 													</div>
 													<select name="size-selector" class="size">
-														<option value="1" data-price="500">35 см.</option>
-														<option value="2" data-price="1000">45 см.</option>
-														<option value="3" data-price="1500">55 см.</option>
+														<option value="1" data-price="500">35 см.(маленькая)</option>
+														<option value="2" data-price="1000">45 см.(средняя)</option>
+														<option value="3" data-price="1500">55 см.(большая)</option>
 													</select>
 												</div>
 												<div class="select-inner-holder btcf">
@@ -610,9 +620,9 @@
 														Выберите размер
 													</div>
 													<select name="size-selector" class="size">
-														<option value="1" data-price="500">35 см.</option>
-														<option value="2" data-price="1000">45 см.</option>
-														<option value="3" data-price="1500">55 см.</option>
+														<option value="1" data-price="500">35 см.(маленькая)</option>
+														<option value="2" data-price="1000">45 см.(средняя)</option>
+														<option value="3" data-price="1500">55 см.(большая)</option>
 													</select>
 												</div>
 												<div class="select-inner-holder btcf">
@@ -658,9 +668,9 @@
 														Выберите размер
 													</div>
 													<select name="size-selector" class="size">
-														<option value="1" data-price="500">35 см.</option>
-														<option value="2" data-price="1000">45 см.</option>
-														<option value="3" data-price="1500">55 см.</option>
+														<option value="1" data-price="500">35 см.(маленькая)</option>
+														<option value="2" data-price="1000">45 см.(средняя)</option>
+														<option value="3" data-price="1500">55 см.(большая)</option>
 													</select>
 												</div>
 												<div class="select-inner-holder btcf">
@@ -706,9 +716,9 @@
 														Выберите размер
 													</div>
 													<select name="size-selector" class="size">
-														<option value="1" data-price="500">35 см.</option>
-														<option value="2" data-price="1000">45 см.</option>
-														<option value="3" data-price="1500">55 см.</option>
+														<option value="1" data-price="500">35 см.(маленькая)</option>
+														<option value="2" data-price="1000">45 см.(средняя)</option>
+														<option value="3" data-price="1500">55 см.(большая)</option>
 													</select>
 												</div>
 												<div class="select-inner-holder btcf">
@@ -754,9 +764,9 @@
 														Выберите размер
 													</div>
 													<select name="size-selector" class="size">
-														<option value="1" data-price="500">35 см.</option>
-														<option value="2" data-price="1000">45 см.</option>
-														<option value="3" data-price="1500">55 см.</option>
+														<option value="1" data-price="500">35 см.(маленькая)</option>
+														<option value="2" data-price="1000">45 см.(средняя)</option>
+														<option value="3" data-price="1500">55 см.(большая)</option>
 													</select>
 												</div>
 												<div class="select-inner-holder btcf">
@@ -802,9 +812,9 @@
 														Выберите размер
 													</div>
 													<select name="size-selector" class="size">
-														<option value="1" data-price="500">35 см.</option>
-														<option value="2" data-price="1000">45 см.</option>
-														<option value="3" data-price="1500">55 см.</option>
+														<option value="1" data-price="500">35 см.(маленькая)</option>
+														<option value="2" data-price="1000">45 см.(средняя)</option>
+														<option value="3" data-price="1500">55 см.(большая)</option>
 													</select>
 												</div>
 												<div class="select-inner-holder btcf">
@@ -925,7 +935,7 @@
 											итого: <span>3 560 р</span>
 										</div>
 										<div class="final-order-button" data-toggle="modal" data-target="#orderModal">
-											оформить
+											оформить заказ
 										</div>
 									</div>
 								</div>
@@ -1001,10 +1011,15 @@
 							<div class="bottom-text-container">
 								<h3>заоголовок текста о корнели пицца</h3>
 								<p>
-									Первая Пиццерия сети CORNELI была открыта в 1960 года в городе Монреаль, Канада. На данный момент сеть Пиццерий CORNELI насчитывает более 70-ти ресторанов по всей Канаде. Сеть Пиццерий CORNELI не стремится за количеством ресторанов, но за качеством своей продукции! Каждый новый ресторан открывает сам основатель сети Alexander Corneli или один из его четырёх сыновей все они с самого детства работают в семейном бизнесе. Обучение нового персонала всегда производится одним из членов семьи Corneli. Сеть аутентичных итальянских пиццерий были открыты как только её основатель Алекс Корнели иммигрировал в Канаду с семьёй, ему было всего 21 год. Он вырос в большой Итальянской семье в Сицилии и уже с 14 лет работал пиццайолой в семейном ресторане. Рецептура пиццы CORNELI уникальна и вот уже более 50 лет завоёвывает сердца всех кто хоть когда то попробовал эту пиццу. <a href="#" class="read-next">
-									<span>Читать далее</span>
-									</a>
+									Первая Пиццерия сети CORNELI была открыта в 1960 года в городе Монреаль, Канада. На данный момент сеть Пиццерий CORNELI насчитывает более 70-ти ресторанов по всей Канаде. Сеть Пиццерий CORNELI не стремится за количеством ресторанов, но за качеством своей продукции! Каждый новый ресторан открывает сам основатель сети Alexander Corneli или один из его четырёх сыновей все они с самого детства работают в семейном бизнесе. Обучение нового персонала всегда производится одним из членов семьи Corneli. Сеть аутентичных итальянских пиццерий были открыты как только её основатель Алекс Корнели иммигрировал в Канаду с семьёй, ему было всего 21 год. Он вырос в большой Итальянской семье в Сицилии и уже с 14 лет работал пиццайолой в семейном ресторане. Рецептура пиццы CORNELI уникальна и вот уже более 50 лет завоёвывает сердца всех кто хоть когда то попробовал эту пиццу. <span class="read-next">Читать далее</span>
 								</p>
+								<div class="hidden-bottom-text-container">
+									<p>
+										Первая Пиццерия сети CORNELI была открыта в 1960 года в городе Монреаль, Канада. На данный момент сеть Пиццерий CORNELI насчитывает более 70-ти ресторанов по всей Канаде. Сеть Пиццерий CORNELI не стремится за количеством ресторанов, но за качеством своей продукции! Каждый новый ресторан открывает сам основатель сети Alexander Corneli или один из его четырёх сыновей все они с самого детства работают в семейном бизнесе. Обучение нового персонала всегда производится одним из членов семьи Corneli. Сеть аутентичных итальянских пиццерий были открыты как только её основатель Алекс Корнели иммигрировал в Канаду с семьёй, ему было всего 21 год. Он вырос в большой Итальянской семье в Сицилии и уже с 14 лет работал пиццайолой в семейном ресторане. Рецептура пиццы CORNELI уникальна и вот уже более 50 лет завоёвывает сердца всех кто хоть когда то попробовал эту пиццу.
+										Первая Пиццерия сети CORNELI была открыта в 1960 года в городе Монреаль, Канада. На данный момент сеть Пиццерий CORNELI насчитывает более 70-ти ресторанов по всей Канаде. Сеть Пиццерий CORNELI не стремится за количеством ресторанов, но за качеством своей продукции! Каждый новый ресторан открывает сам основатель сети Alexander Corneli или один из его четырёх сыновей все они с самого детства работают в семейном бизнесе. Обучение нового персонала всегда производится одним из членов семьи Corneli. Сеть аутентичных итальянских пиццерий были открыты как только её основатель Алекс Корнели иммигрировал в Канаду с семьёй, ему было всего 21 год. Он вырос в большой Итальянской семье в Сицилии и уже с 14 лет работал пиццайолой в семейном ресторане. Рецептура пиццы CORNELI уникальна и вот уже более 50 лет завоёвывает сердца всех кто хоть когда то попробовал эту пиццу.
+										Первая Пиццерия сети CORNELI была открыта в 1960 года в городе Монреаль, Канада. На данный момент сеть Пиццерий CORNELI насчитывает более 70-ти ресторанов по всей Канаде. Сеть Пиццерий CORNELI не стремится за количеством ресторанов, но за качеством своей продукции! Каждый новый ресторан открывает сам основатель сети Alexander Corneli или один из его четырёх сыновей все они с самого детства работают в семейном бизнесе. Обучение нового персонала всегда производится одним из членов семьи Corneli. Сеть аутентичных итальянских пиццерий были открыты как только её основатель Алекс Корнели иммигрировал в Канаду с семьёй, ему было всего 21 год. Он вырос в большой Итальянской семье в Сицилии и уже с 14 лет работал пиццайолой в семейном ресторане. Рецептура пиццы CORNELI уникальна и вот уже более 50 лет завоёвывает сердца всех кто хоть когда то попробовал эту пиццу.
+									</p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -1033,12 +1048,17 @@
 								<img src="images/promotion-picture.jpg" / class="promotion-picture">
 								<div class="promotion-description-and-price-container btcf">
 									<div class="promotion-description">
-										сет из 5 пицц для дружной компании
+										Одна средняя пицца (30 см) + Coca-Cola (500 мл) 
 									</div>
 									<div class="white-ellipce">
 										<div class="promotion-price">
-											1 999 р
+											500 р
 										</div>
+									</div>
+								</div>
+								<div class="in-cart-button-container">
+									<div class="add-to-cart-button bottom-cart">
+										в корзину
 									</div>
 								</div>
 							</a>
@@ -1048,12 +1068,17 @@
 								<img src="images/promotion-picture-2.jpg" / class="promotion-picture">
 								<div class="promotion-description-and-price-container btcf">
 									<div class="promotion-description">
-										сет из 5 пицц для дружной компании
+										Две большие пиццы (35 см) + 2 х 500мл Сoca-Cola
 									</div>
 									<div class="white-ellipce">
 										<div class="promotion-price">
-											500 р
+											1200 р
 										</div>
+									</div>
+								</div>
+								<div class="in-cart-button-container">
+									<div class="add-to-cart-button bottom-cart">
+										в корзину
 									</div>
 								</div>
 							</a>
@@ -1063,12 +1088,17 @@
 								<img src="images/promotion-picture-3.jpg" / class="promotion-picture">
 								<div class="promotion-description-and-price-container btcf">
 									<div class="promotion-description">
-										сет из 5 пицц для дружной компании
+										Бизнес комбо: 5 больших пицц (35см) + 5 х 500мл Coca-Cola
 									</div>
 									<div class="white-ellipce">
 										<div class="promotion-price">
-											699 р
+											2400 р
 										</div>
+									</div>
+								</div>
+								<div class="in-cart-button-container">
+									<div class="add-to-cart-button bottom-cart">
+										в корзину
 									</div>
 								</div>
 							</a>
@@ -1119,10 +1149,10 @@
 							</div>
 							<div class="col-xs-2">
 								<a class="renaissance">
-									<img src="images/ren-logo.png"/>
 									<div>
-										Создание сайтов
+										Разработка сайтов
 									</div>
+									<img src="images/ren-logo.png"/>
 								</a>
 							</div>
 						</div>
@@ -1138,29 +1168,45 @@
 <div class="modal fade" id="orderModal" tabindex="-1" role="dialog" aria-labelledby="orderModalLabel">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
-			<div class="modal-header">
-				<img src="images/cross.png" class="close-cross" data-dismiss="modal" aria-label="Close">
-				<div class="modal-head">
-					Быстро
+			<div class="order-form-wrapper">
+				<div class="modal-header">
+					<img src="images/cross.png" class="close-cross" data-dismiss="modal" aria-label="Close">
+					<div class="modal-head">
+						Быстро
+					</div>
+					<div class="modal-title" id="myModalLabel">
+						оформить заказ
+					</div>
 				</div>
-				<div class="modal-title" id="myModalLabel">
-					оформить заказ
+				<div class="modal-body">
+					<form id="ORDER_FORM">
+						<div class="form-holder">
+							<div class="form-group modal-order">
+								<input type="text" class="phone" name="phone-field" id="phoneFieldOrder" placeholder="+ 7 (---) --- -- --" required>
+							</div>
+							<div class="form-group modal-order">
+								<textarea name="message" id="textareaModalOrder" rows="5"></textarea>
+							</div>
+							<div class="modal-bottom-footer">
+								<button type="submit" name="submit-modal" class="submition">отправить</button>
+							</div>
+						</div>
+					</form>
 				</div>
 			</div>
-			<div class="modal-body">
-				<form id="requestForm">
-					<div class="form-holder">
-						<div class="form-group modal-order">
-							<input type="text" class="phone" name="phone-field" id="phoneFieldOrder" placeholder="+ 7 (---) --- -- --" required>
-						</div>
-						<div class="form-group modal-order">
-							<textarea name="message" id="textareaModalOrder" rows="5"></textarea>
-						</div>
-						<div class="modal-bottom-footer">
-							<button type="submit" name="submit-modal" class="submition">отправить</button>
-						</div>
+			<div class="hidden-form-holder">
+				<div class="modal-header">
+					<img src="images/cross.png" class="close-cross" data-dismiss="modal" aria-label="Close">
+					<div class="modal-head">
+						Cпасибо
 					</div>
-				</form>
+					<div class="modal-title" id="myModalLabel">
+						Ваш заказ оформлен
+					</div>
+					<div class="hidden-modal-sub-text">
+						В ближайшее время с вами свяжется наш менеджер
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
