--- a/item-catalog.html
+++ b/item-catalog.html
@@ -222,6 +222,7 @@
 														</div>
 														<div class="item-total-price total-inner-price btcf">
 															<div class="price-indicator inner-price-indicator">
+																<span class="price-let">цена</span>
 																<span class="num">500</span> р
 																<input type="hidden" class="item-price"/>
 															</div>
