--- a/promo.html
+++ b/promo.html
@@ -200,8 +200,6 @@
 												<div class="promotion-text">
 													Первая Пиццерия сети CORNELI была открыта в 1960 года в городе Монреаль, Канада. На данный момент сеть Пиццерий CORNELI насчитывает более 70-ти ресторанов по всей Канаде.
 												</div>
-												<a href="#" class="promotion-learn-more-button">
-													подробнее </a>
 											</div>
 										</div>
 									</div>
@@ -223,8 +221,6 @@
 												<div class="promotion-text">
 													Первая Пиццерия сети CORNELI была открыта в 1960 года в городе Монреаль, Канада. На данный момент сеть Пиццерий CORNELI насчитывает более 70-ти ресторанов по всей Канаде.
 												</div>
-												<a href="#" class="promotion-learn-more-button">
-													подробнее </a>
 											</div>
 										</div>
 									</div>
@@ -250,8 +246,9 @@
 													<div class="promotion-price-indicator">
 														1 999 р
 													</div>
-													<a href="#" class="promotion-learn-more-button">
-														подробнее </a>
+													<div class="add-to-cart-button promo-add">
+														в корзину
+													</div>
 												</div>
 											</div>
 										</div>
@@ -274,8 +271,6 @@
 												<div class="promotion-text">
 													Первая Пиццерия сети CORNELI была открыта в 1960 года в городе Монреаль, Канада. На данный момент сеть Пиццерий CORNELI насчитывает более 70-ти ресторанов по всей Канаде.
 												</div>
-												<a href="#" class="promotion-learn-more-button">
-													подробнее </a>
 											</div>
 										</div>
 									</div>
@@ -301,8 +296,9 @@
 													<div class="promotion-price-indicator">
 														1 999 р
 													</div>
-													<a href="#" class="promotion-learn-more-button">
-														подробнее </a>
+													<div class="add-to-cart-button promo-add">
+														в корзину
+													</div>
 												</div>
 											</div>
 										</div>
