--- a/contacts.html
+++ b/contacts.html
@@ -264,7 +264,7 @@
 											<form action="" id="write-to-us-form">
 												<div class="write-to-us-form-header-container">
 													<div class="write-to-us-form-header-part-1">
-														возникли вопросы?
+														Возникли вопросы?
 													</div>
 													<div class="write-to-us-form-header-part-2">
 														напишите нам
@@ -289,7 +289,7 @@
 													</div>
 												</div>
 												<div class="write-to-us-form-footer-container">
-													<button type="submit" name="submit-modal" class="submition">отправить</button>
+													<button type="submit" name="submit-modal" class="submition-cont" data-toggle="modal" data-target="#ThankYouModal">отправить</button>
 												</div>
 											</form>
 										</div>
@@ -498,6 +498,26 @@
 				</footer>
 		</div>
 		</div>
+	<!--MODAL	-->
+	<div class="modal fade" id="ThankYouModal" tabindex="-1" role="dialog" aria-labelledby="orderModalLabel">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<img src="images/cross.png" class="close-cross" data-dismiss="modal" aria-label="Close">
+					<div class="modal-head">
+						Спасибо
+					</div>
+					<div class="modal-title thank" id="myModalLabel">
+						Ваш вопрос отправлен
+					</div>
+					<div class="hidden-modal-sub-text">
+						В ближайшее время с вами свяжется наш менеджер
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!--MODAL	-->
 	<!--FOOTER-->
 	</body>
 	
