--- a/home.html
+++ b/home.html
@@ -61,19 +61,21 @@
 							<!--PHONE-->
 							<!--CART-PRICE-->
 							<div class="cart-sum-container">
-								<img src="images/red-cart.png"/>
-								<div class="cart-sum">
-									Корзина пуста
-								</div>
-								<div class="cart-container cart-hidden">
-									<div class="cart">
-										<div class="red-part"></div>
-										<div class="calculation-container">
-											<div class="final-order-button" data-toggle="modal" data-target="#orderModal">
-												оформить заказ
+								<div class="sum-image-container">
+									<img src="images/red-cart.png"/>
+									<div class="cart-container cart-hidden">
+										<div class="cart">
+											<div class="red-part"></div>
+											<div class="calculation-container">
+												<div class="final-order-button" data-toggle="modal" data-target="#orderModal">
+													оформить заказ
+												</div>
 											</div>
 										</div>
 									</div>
+								</div>
+								<div class="cart-sum">
+									Корзина пуста
 								</div>
 							</div>
 							<!--CART-PRICE-->
@@ -271,7 +273,7 @@
 												</div>
 												<div class="item-description-container">
 													<div class="item-name">
-														диабло
+														<span>диабло</span>
 													</div>
 													<div class="item-ingredients-container">
 														Ветчина, шампиньоны, сыр, моцарелла,соус, орегано
@@ -319,7 +321,7 @@
 												</div>
 												<div class="item-description-container">
 													<div class="item-name">
-														мясной царь
+														<span>мясной царь</span>
 													</div>
 													<div class="item-ingredients-container">
 														Куриное филе, сыр, соус Цезарь, салат Романо, сыр Пармезан
@@ -367,7 +369,7 @@
 												</div>
 												<div class="item-description-container">
 													<div class="item-name">
-														мексиканская
+														<span>мексиканская</span>
 													</div>
 													<div class="item-ingredients-container">
 														Колбаса Пеперони, болгарский перец, маслины, перец Чили, сыр Моцарелла, пицца-соус, соус Табаско
@@ -415,7 +417,7 @@
 												</div>
 												<div class="item-description-container">
 													<div class="item-name">
-														диабло
+														<span>диабло</span>
 													</div>
 													<div class="item-ingredients-container">
 														Ветчина, шампиньоны, сыр, моцарелла,соус, орегано
@@ -463,7 +465,7 @@
 												</div>
 												<div class="item-description-container">
 													<div class="item-name">
-														мясной царь
+														<span>мясной царь</span>
 													</div>
 													<div class="item-ingredients-container">
 														Куриное филе, сыр, соус Цезарь, салат Романо, сыр Пармезан
@@ -511,7 +513,7 @@
 												</div>
 												<div class="item-description-container">
 													<div class="item-name">
-														мексиканская
+														<span>мексиканская</span>
 													</div>
 													<div class="item-ingredients-container">
 														Колбаса Пеперони, болгарский перец, маслины, перец Чили, сыр Моцарелла, пицца-соус, соус Табаско
@@ -559,7 +561,7 @@
 												</div>
 												<div class="item-description-container">
 													<div class="item-name">
-														диабло
+														<span>диабло</span>
 													</div>
 													<div class="item-ingredients-container">
 														Ветчина, шампиньоны, сыр, моцарелла,соус, орегано
@@ -607,7 +609,7 @@
 												</div>
 												<div class="item-description-container">
 													<div class="item-name">
-														мясной царь
+														<span>мясной царь</span>
 													</div>
 													<div class="item-ingredients-container">
 														Куриное филе, сыр, соус Цезарь, салат Романо, сыр Пармезан
@@ -655,7 +657,7 @@
 												</div>
 												<div class="item-description-container">
 													<div class="item-name">
-														мексиканская
+														<span>мексиканская</span>
 													</div>
 													<div class="item-ingredients-container">
 														Колбаса Пеперони, болгарский перец, маслины, перец Чили, сыр Моцарелла, пицца-соус, соус Табаско
@@ -703,7 +705,7 @@
 												</div>
 												<div class="item-description-container">
 													<div class="item-name">
-														диабло
+														<span>диабло</span>
 													</div>
 													<div class="item-ingredients-container">
 														Ветчина, шампиньоны, сыр, моцарелла,соус, орегано
@@ -751,7 +753,7 @@
 												</div>
 												<div class="item-description-container">
 													<div class="item-name">
-														мясной царь
+														<span>мясной царь</span>
 													</div>
 													<div class="item-ingredients-container">
 														Куриное филе, сыр, соус Цезарь, салат Романо, сыр Пармезан
@@ -799,7 +801,7 @@
 												</div>
 												<div class="item-description-container">
 													<div class="item-name">
-														мексиканская
+														<span>мексиканская</span>
 													</div>
 													<div class="item-ingredients-container">
 														Колбаса Пеперони, болгарский перец, маслины, перец Чили, сыр Моцарелла, пицца-соус, соус Табаско
